--- a/index.html
+++ b/index.html
@@ -15,24 +15,23 @@
       <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
     <nav class="topnav" id="topnav">
-      <button class="nav-btn active" data-target="home"><span>Play</span></button>
-      <button class="nav-btn" data-target="tutorial-panel"><span>Tutorial</span></button>
-      <button class="nav-btn" data-target="about-panel"><span>About</span></button>
-      <button class="nav-btn" data-target="leaderboard-panel"><span>Leaderboard</span></button>
+      <button class="nav-btn active" data-target="home"><i class="fas fa-gamepad"></i> <span>Play</span></button>
+      <button class="nav-btn" data-target="tutorial-panel"><i class="fas fa-book"></i> <span>Tutorial</span></button>
+      <button class="nav-btn" data-target="about-panel"><i class="fas fa-users"></i> <span>About</span></button>
+      <button class="nav-btn" data-target="leaderboard-panel"><i class="fas fa-trophy"></i> <span>Leaderboard</span></button>
     </nav>
     <div class="topbar-right">
       <button id="sound-toggle" class="icon-btn"><i class="fas fa-volume-up"></i></button>
       <button id="open-leaderboard" class="icon-btn"><i class="fas fa-trophy"></i></button>
     </div>
   </header>
-
   <nav class="mobile-nav" id="mobile-nav">
     <div class="nav-menu">
       <button class="close-nav" id="close-mobile-nav"><i class="fas fa-times"></i></button>
-      <button data-target="home">Play</button>
-      <button data-target="tutorial-panel">Tutorial</button>
-      <button data-target="about-panel">About</button>
-      <button data-target="leaderboard-panel">Leaderboard</button>
+      <button data-target="home"><i class="fas fa-gamepad"></i> Play</button>
+      <button data-target="tutorial-panel"><i class="fas fa-book"></i> Tutorial</button>
+      <button data-target="about-panel"><i class="fas fa-users"></i> About</button>
+      <button data-target="leaderboard-panel"><i class="fas fa-trophy"></i> Leaderboard</button>
     </div>
   </nav>
 
@@ -42,25 +41,17 @@
       <div class="hero" id="hero-section">
         <div class="hero-left">
           <h1 data-animate="fade">Logic Runner</h1>
-          <p class="subtitle" data-animate="fade-delay">Test your logic with real math-based challenges.<br>Drag, solve, and practice with interactive propositional logic puzzles.</p>
+          <p class="subtitle" data-animate="fade-delay">
+            Practice your critical thinking and logic skills in the most creative way.<br>
+            Play interactive propositional logic puzzles designed for students.
+          </p>
           <div class="hero-cta">
-            <button id="quick-start" class="btn btn-primary" data-animate="pop"><i class="fas fa-play"></i> Quick Start</button>
-            <button id="quick-tutorial" class="btn btn-secondary" data-animate="pop-delay"><i class="fas fa-book"></i> Tutorial</button>
+            <button id="start-game" class="btn cta-game" data-animate="pop"><i class="fas fa-gamepad"></i> Start Game</button>
           </div>
           <div class="meta-row">
             <span class="meta-pill" data-animate="badge">Modern</span>
             <span class="meta-pill" data-animate="badge-delay">Minimal</span>
             <span class="meta-pill" data-animate="badge-delay2">Fun</span>
-          </div>
-          <div class="play-info" data-animate="fade">
-            <h4>Game Rules & Rubric Integration</h4>
-            <ul>
-              <li><b>Math Integration:</b> Every level includes at least one topic (truth tables, negation, disjunction, implication) applied correctly.</li>
-              <li><b>Creativity:</b> No two runs are the same. Logic puzzles and table tasks are randomly mixed.</li>
-              <li><b>Playability:</b> Each run has 5 interactive tasks; rules and hints are shown with every step.</li>
-              <li><b>Presentation:</b> Animated transitions, color feedback, mobile/desktop clarity.</li>
-              <li><b>Documentation:</b> Every panel documents its content and source logic.</li>
-            </ul>
           </div>
         </div>
         <aside class="hero-right" data-animate="fade-delay">
@@ -81,16 +72,13 @@
                 <div class="settings-card" data-value="timed">Timed</div>
               </div>
             </div>
-            <div style="margin-top:12px;">
-              <button id="start-game" class="btn btn-primary">Start Game</button>
-            </div>
           </div>
           <div class="card small-card" id="help-card">
             <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
             <ol class="tips">
-              <li>Drag operator names to symbols, or fill the correct answer!</li>
-              <li>Timed mode: Each question has a time limit.</li>
-              <li>Use <span class="pill-hot">Retry</span> or <span class="pill-hot">Quit</span> anytime.</li>
+              <li>Drag operator names to symbols or fill the correct answer!</li>
+              <li>Timed mode gives a time limit for each question.</li>
+              <li>Use <span class="pill-hot">Retry</span> or <span class="pill-hot">Quit</span> to restart or exit anytime.</li>
               <li>Score points for correct logic and table fills!</li>
             </ol>
           </div>
@@ -98,67 +86,47 @@
       </div>
       <section id="game-area" class="game-area"></section>
     </section>
-
     <!-- Tutorial Panel -->
     <section id="tutorial-panel" class="panel">
       <div class="card tutorial-card" data-animate="fade-pop">
         <div class="card-title"><i class="fas fa-book-open"></i> Tutorial</div>
         <h3>How to Play</h3>
         <ol class="tutorial-list">
-          <li><b>Choose difficulty and mode.</b> Each run uses unique logic tasks.</li>
-          <li><b>Symbol Match:</b> Drag logic name to the correct symbol (AND, OR, IMPLIES, NOT).</li>
-          <li><b>Sentence Builder:</b> Fill in the blank with the correct logic connector.</li>
-          <li><b>Truth Table Task:</b> Fill T/F results for tables such as AND, OR, XOR, Negation.</li>
-          <li><b>Lives/Timer:</b> Score more by getting answers right before your lives/timer runs out.</li>
+          <li>Choose your difficulty and mode</li>
+          <li>For each question, follow the prompt and drag/fill/select correct logic</li>
+          <li>Timed mode = more challenge, higher score</li>
         </ol>
-        <p>More features: mobile-friendly, leaderboard, player name, sounds, modal feedback. <span class="pill-hot">Try it now!</span></p>
-        <div class="tutorial-img"></div>
+        <p>Enjoy instant feedback, sound, and fun transitions. <span class="pill-hot">Ready?</span></p>
       </div>
     </section>
-
+    <!-- ABOUT -->
     <section id="about-panel" class="panel">
       <div class="card about-card" data-animate="fade-pop">
         <div class="card-title"><i class="fas fa-users"></i> About</div>
         <div>
-          <h3>Who we are</h3>
-          <p>We are Group 3, Block 2N, BSIT. Project Team:</p>
+          <h3>BSIT Group 3 Block 2N</h3>
           <ul>
             <li>CJ R. Tabada</li>
             <li>Adrian Kith Lagmay</li>
             <li>Rafael Bangoy Caralipio</li>
             <li>Cymon Austria</li>
           </ul>
-          <p>This game was built for math integration, logic mastery, and fun for our class.</p>
-        </div>
-        <div class="about-rubric" data-animate="fade-pop">
-          <h4>Project Rubric</h4>
-          <table class="rubric-table">
-            <thead>
-              <tr><th>Criteria</th><th>Description</th><th>Points</th></tr>
-            </thead>
-            <tbody>
-              <tr><td>Math Integration</td><td>At least 1 topic applied correctly</td><td>20</td></tr>
-              <tr><td>Playability</td><td>Rules are clear & game works as intended</td><td>20</td></tr>
-              <tr><td>Creativity</td><td>Unique & engaging concept</td><td>20</td></tr>
-              <tr><td>Presentation</td><td>Clear, confident, organized</td><td>15</td></tr>
-              <tr><td>Documentation</td><td>Complete, neat, correct format</td><td>15</td></tr>
-              <tr><td>Contribution</td><td>Active in group presentation</td><td>10</td></tr>
-              <tr><th colspan="2">Total</th><th>100</th></tr>
-            </tbody>
-          </table>
+          <p>
+            Built for mathematical logic and computer science students at MSU-IIT.<br>
+            Our game was made to be fun, interactive, and visually engaging.
+          </p>
         </div>
       </div>
     </section>
-
     <section id="leaderboard-panel" class="panel">
       <div class="card leaderboard-card" data-animate="fade-pop">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
         <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
-          <input id="player-name" placeholder="Your name" class="name-input" spellcheck="false" maxlength="20" />
+          <input id="player-name" placeholder="Your name" class="name-input" maxlength="20" />
           <button id="clear-leader" class="btn btn-secondary">Clear</button>
         </div>
         <ol id="leader-list"></ol>
-        <div class="leader-desc" data-animate="fade">Top scores are saved locally! Score more by fast & accurate logic!</div>
+        <div class="leader-desc">Your best scores will appear here. You earn more by solving quickly and accurately!</div>
       </div>
     </section>
   </main>
@@ -175,7 +143,6 @@
       <button id="btn-quit" class="btn floating-btn hotbox"><i class="fas fa-sign-out-alt"></i></button>
     </div>
   </div>
-
   <script src="game.js"></script>
 </body>
 </html>
