--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
     <section id="home" class="panel active-panel">
       <div class="hero" id="hero-section">
         <div class="hero-left">
-          <h1 data-animate="fade">Logic Runner</h1>
-          <p class="subtitle" data-animate="fade-delay">
-            Practice your critical thinking and logic skills in the most creative way.<br>
-            Play interactive propositional logic puzzles designed for students.
+          <h1>Logic Runner</h1>
+          <p class="subtitle">
+            Train your logic skills. Play interactive propositional logic puzzles designed for students.
           </p>
           <div class="hero-cta">
-            <button id="start-game" class="btn cta-game" data-animate="pop"><i class="fas fa-gamepad"></i> Start Game</button>
+            <button id="start-game" class="btn cta-game"><i class="fas fa-gamepad"></i> Start Game</button>
           </div>
           <div class="meta-row">
-            <span class="meta-pill" data-animate="badge">Modern</span>
-            <span class="meta-pill" data-animate="badge-delay">Minimal</span>
-            <span class="meta-pill" data-animate="badge-delay2">Fun</span>
+            <span class="meta-pill">Modern</span>
+            <span class="meta-pill">Minimal</span>
+            <span class="meta-pill">Fun</span>
           </div>
         </div>
-        <aside class="hero-right" data-animate="fade-delay">
+        <aside class="hero-right">
           <div class="card" id="settings-card">
             <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
             <div class="settings-row">
