--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logic Runner | BSIT Group 3 Block 2N</title>
+  <title>Logic Runner | Group 3 Block 2N</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
+  <!-- NAVIGATION BAR Desktop and Mobile -->
   <header class="topbar">
     <div class="topbar-left">
       <button id="hamburger" class="hamburger" aria-label="Menu"><i class="fas fa-bars"></i></button>
       <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
     <nav class="topnav" id="topnav">
-      <button class="nav-btn active" data-target="home"><i class="fas fa-gamepad"></i> <span>Play</span></button>
-      <button class="nav-btn" data-target="tutorial-panel"><i class="fas fa-book"></i> <span>Tutorial</span></button>
-      <button class="nav-btn" data-target="about-panel"><i class="fas fa-users"></i> <span>About</span></button>
-      <button class="nav-btn" data-target="leaderboard-panel"><i class="fas fa-trophy"></i> <span>Leaderboard</span></button>
+      <button class="nav-btn active" data-target="home"><i class="fas fa-gamepad"></i> Play</button>
+      <button class="nav-btn" data-target="tutorial-panel"><i class="fas fa-book"></i> Tutorial</button>
+      <button class="nav-btn" data-target="about-panel"><i class="fas fa-users"></i> About</button>
+      <button class="nav-btn" data-target="leaderboard-panel"><i class="fas fa-trophy"></i> Leaderboard</button>
     </nav>
-    <div class="topbar-right">
+    <div class="topbar-right" style="gap:8px;">
       <button id="sound-toggle" class="icon-btn"><i class="fas fa-volume-up"></i></button>
-      <button id="open-leaderboard" class="icon-btn"><i class="fas fa-trophy"></i></button>
     </div>
   </header>
   <nav class="mobile-nav" id="mobile-nav">
@@ -34,16 +33,12 @@
       <button data-target="leaderboard-panel"><i class="fas fa-trophy"></i> Leaderboard</button>
     </div>
   </nav>
-
   <main class="container">
-    <!-- Play Panel -->
     <section id="home" class="panel active-panel">
       <div class="hero" id="hero-section">
         <div class="hero-left">
           <h1>Logic Runner</h1>
-          <p class="subtitle">
-            Train your logic skills. Play interactive propositional logic puzzles designed for students.
-          </p>
+          <div class="subtitle">Practice logic. Drag, solve, and prove!<br>Optimized for fun and learning.</div>
           <div class="hero-cta">
             <button id="start-game" class="btn cta-game"><i class="fas fa-gamepad"></i> Start Game</button>
           </div>
@@ -57,7 +52,7 @@
           <div class="card" id="settings-card">
             <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
             <div class="settings-row">
-              <div class="settings-label">DIFFICULTY</div>
+              <span class="settings-label">Difficulty</span>
               <div class="settings-choices" id="difficulty-select">
                 <div class="settings-card active" data-value="easy">Beginner</div>
                 <div class="settings-card" data-value="medium">Intermediate</div>
@@ -65,7 +60,7 @@
               </div>
             </div>
             <div class="settings-row">
-              <div class="settings-label">MODE</div>
+              <span class="settings-label">Mode</span>
               <div class="settings-choices" id="mode-select">
                 <div class="settings-card active" data-value="classic">Classic</div>
                 <div class="settings-card" data-value="timed">Timed</div>
@@ -75,59 +70,50 @@
           <div class="card small-card" id="help-card">
             <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
             <ol class="tips">
-              <li>Drag operator names to symbols or fill in the correct answer!</li>
-              <li>Timed mode: solve before the timer runs out.</li>
-              <li>Use Retry or Quit to restart or exit at any time.</li>
-              <li>Points = logic & table accuracy.</li>
+              <li>Each run: 5 randomized logic puzzles</li>
+              <li>Drag, drop, and act fast for big points</li>
+              <li>Use <span class="pill-hot">Retry</span> or <span class="pill-hot">Quit</span> anytime.</li>
             </ol>
           </div>
         </aside>
       </div>
       <section id="game-area" class="game-area"></section>
     </section>
-    <!-- Tutorial Panel -->
     <section id="tutorial-panel" class="panel">
-      <div class="card tutorial-card">
+      <div class="card">
         <div class="card-title"><i class="fas fa-book-open"></i> Tutorial</div>
         <ol class="tutorial-list">
-          <li>Choose difficulty and mode</li>
-          <li>Each question: follow the prompt and drag/fill the logic.</li>
-          <li>Score points for correct moves/thinking. Lose lives if wrong.</li>
-          <li>Timed = more pressure, more score.</li>
+          <li>Choose Difficulty and Mode</li>
+          <li>Each question: Follow prompts and drag, drop, or type your answer</li>
+          <li>Timed mode: More challenge and higher scores!</li>
         </ol>
-        <p>Enjoy color feedback, sound, and transitions.</p>
+        <p>Fun, competitive, and creative logic challenges!</p>
       </div>
     </section>
-    <!-- ABOUT -->
     <section id="about-panel" class="panel">
       <div class="card about-card">
         <div class="card-title"><i class="fas fa-users"></i> About</div>
-        <div>
-          <h3>Group 3 Block 2N, BSIT</h3>
-          <ul>
-            <li>CJ R. Tabada</li>
-            <li>Adrian Kith Lagmay</li>
-            <li>Rafael Bangoy Caralipio</li>
-            <li>Cymon Austria</li>
-          </ul>
-          <p>
-            This game is for real math logic learning and interactive fun.
-          </p>
-        </div>
+        <p><b>Group 3 Block 2N, BSIT</b></p>
+        <ul>
+          <li>CJ R. Tabada</li>
+          <li>Adrian Kith Lagmay</li>
+          <li>Rafael Bangoy Caralipio</li>
+          <li>Cymon Austria</li>
+        </ul>
+        <p>MSU-IIT Final STEM/IT Math Logic Project</p>
       </div>
     </section>
     <section id="leaderboard-panel" class="panel">
       <div class="card leaderboard-card">
         <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
-        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
-          <input id="player-name" placeholder="Your name" class="name-input" maxlength="20" />
-          <button id="clear-leader" class="btn btn-secondary">Clear</button>
-        </div>
+        <input id="player-name" placeholder="Your name" class="name-input" maxlength="20" />
+        <button id="clear-leader" class="btn btn-secondary">Clear</button>
         <ol id="leader-list"></ol>
-        <div class="leader-desc">Your best scores will show here. Play better and faster to climb up!</div>
+        <div class="leader-desc">Top scores saved only on your device (local).</div>
       </div>
     </section>
   </main>
+
   <div id="floating-ui" class="floating-ui">
     <div class="floating-top">
       <div class="status-indicator hotbox hot-level"><i class="fas fa-layer-group"></i> <span id="stat-level"></span></div>
