--- a/index.html
+++ b/index.html
@@ -52,16 +52,7 @@
             <span class="meta-pill" data-animate="badge-delay">Minimal</span>
             <span class="meta-pill" data-animate="badge-delay2">Fun</span>
           </div>
-          <div class="play-info" data-animate="fade">
-            <h4>Game Rules & Rubric Integration</h4>
-            <ul>
-              <li><b>Math Integration:</b> Every level includes at least one topic (truth tables, negation, disjunction, implication) applied correctly.</li>
-              <li><b>Creativity:</b> No two runs are the same. Logic puzzles and table tasks are randomly mixed.</li>
-              <li><b>Playability:</b> Each run has 5 interactive tasks; rules and hints are shown with every step.</li>
-              <li><b>Presentation:</b> Animated transitions, color feedback, mobile/desktop clarity.</li>
-              <li><b>Documentation:</b> Every panel documents its content and source logic.</li>
-            </ul>
-          </div>
+          <!-- Removed play-info: Game Rules & Rubric Integration and list -->
         </div>
         <aside class="hero-right" data-animate="fade-delay">
           <div class="card" id="settings-card">
@@ -130,23 +121,7 @@
           </ul>
           <p>This game was built for math integration, logic mastery, and fun for our class.</p>
         </div>
-        <div class="about-rubric" data-animate="fade-pop">
-          <h4>Project Rubric</h4>
-          <table class="rubric-table">
-            <thead>
-              <tr><th>Criteria</th><th>Description</th><th>Points</th></tr>
-            </thead>
-            <tbody>
-              <tr><td>Math Integration</td><td>At least 1 topic applied correctly</td><td>20</td></tr>
-              <tr><td>Playability</td><td>Rules are clear & game works as intended</td><td>20</td></tr>
-              <tr><td>Creativity</td><td>Unique & engaging concept</td><td>20</td></tr>
-              <tr><td>Presentation</td><td>Clear, confident, organized</td><td>15</td></tr>
-              <tr><td>Documentation</td><td>Complete, neat, correct format</td><td>15</td></tr>
-              <tr><td>Contribution</td><td>Active in group presentation</td><td>10</td></tr>
-              <tr><th colspan="2">Total</th><th>100</th></tr>
-            </tbody>
-          </table>
-        </div>
+        <!-- Removed about-rubric: Project Rubric table and section -->
       </div>
     </section>
 
