--- a/index.html
+++ b/index.html
@@ -1,156 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logic Runner | BSIT Group 3 Block 2N</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-
-  <header class="topbar">
-    <div class="topbar-left">
-      <button id="hamburger" class="hamburger" aria-label="Menu"><i class="fas fa-bars"></i></button>
-      <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
-    </div>
-    <nav class="topnav" id="topnav">
-      <button class="nav-btn active" data-target="home"><span>Play</span></button>
-      <button class="nav-btn" data-target="tutorial-panel"><span>Tutorial</span></button>
-      <button class="nav-btn" data-target="about-panel"><span>About</span></button>
-      <button class="nav-btn" data-target="leaderboard-panel"><span>Leaderboard</span></button>
-    </nav>
-    <div class="topbar-right">
-      <button id="sound-toggle" class="icon-btn"><i class="fas fa-volume-up"></i></button>
-      <button id="open-leaderboard" class="icon-btn"><i class="fas fa-trophy"></i></button>
-    </div>
-  </header>
-
-  <nav class="mobile-nav" id="mobile-nav">
-    <div class="nav-menu">
-      <button class="close-nav" id="close-mobile-nav"><i class="fas fa-times"></i></button>
-      <button data-target="home">Play</button>
-      <button data-target="tutorial-panel">Tutorial</button>
-      <button data-target="about-panel">About</button>
-      <button data-target="leaderboard-panel">Leaderboard</button>
-    </div>
-  </nav>
-
-  <main class="container">
-    <!-- Play Panel -->
-    <section id="home" class="panel active-panel">
-      <div class="hero" id="hero-section">
-        <div class="hero-left">
-          <h1 data-animate="fade">Logic Runner</h1>
-          <p class="subtitle" data-animate="fade-delay">Test your logic with real math-based challenges.<br>Drag, solve, and practice with interactive propositional logic puzzles.</p>
-          <div class="hero-cta">
-            <button id="quick-start" class="btn btn-primary" data-animate="pop"><i class="fas fa-play"></i> Quick Start</button>
-            <button id="quick-tutorial" class="btn btn-secondary" data-animate="pop-delay"><i class="fas fa-book"></i> Tutorial</button>
-          </div>
-          <div class="meta-row">
-            <span class="meta-pill" data-animate="badge">Modern</span>
-            <span class="meta-pill" data-animate="badge-delay">Minimal</span>
-            <span class="meta-pill" data-animate="badge-delay2">Fun</span>
-          </div>
-          <!-- Removed play-info: Game Rules & Rubric Integration and list -->
-        </div>
-        <aside class="hero-right" data-animate="fade-delay">
-          <div class="card" id="settings-card">
-            <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
-            <div class="settings-row">
-              <div class="settings-label">DIFFICULTY</div>
-              <div class="settings-choices" id="difficulty-select">
-                <div class="settings-card active" data-value="easy">Beginner</div>
-                <div class="settings-card" data-value="medium">Intermediate</div>
-                <div class="settings-card" data-value="hard">Expert</div>
-              </div>
-            </div>
-            <div class="settings-row">
-              <div class="settings-label">MODE</div>
-              <div class="settings-choices" id="mode-select">
-                <div class="settings-card active" data-value="classic">Classic</div>
-                <div class="settings-card" data-value="timed">Timed</div>
-              </div>
-            </div>
-            <div style="margin-top:12px;">
-              <button id="start-game" class="btn btn-primary">Start Game</button>
-            </div>
-          </div>
-          <div class="card small-card" id="help-card">
-            <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
-            <ol class="tips">
-              <li>Drag operator names to symbols, or fill the correct answer!</li>
-              <li>Timed mode: Each question has a time limit.</li>
-              <li>Use <span class="pill-hot">Retry</span> or <span class="pill-hot">Quit</span> anytime.</li>
-              <li>Score points for correct logic and table fills!</li>
-            </ol>
-          </div>
-        </aside>
-      </div>
-      <section id="game-area" class="game-area"></section>
-    </section>
-
-    <!-- Tutorial Panel -->
-    <section id="tutorial-panel" class="panel">
-      <div class="card tutorial-card" data-animate="fade-pop">
-        <div class="card-title"><i class="fas fa-book-open"></i> Tutorial</div>
-        <h3>How to Play</h3>
-        <ol class="tutorial-list">
-          <li><b>Choose difficulty and mode.</b> Each run uses unique logic tasks.</li>
-          <li><b>Symbol Match:</b> Drag logic name to the correct symbol (AND, OR, IMPLIES, NOT).</li>
-          <li><b>Sentence Builder:</b> Fill in the blank with the correct logic connector.</li>
-          <li><b>Truth Table Task:</b> Fill T/F results for tables such as AND, OR, XOR, Negation.</li>
-          <li><b>Lives/Timer:</b> Score more by getting answers right before your lives/timer runs out.</li>
-        </ol>
-        <p>More features: mobile-friendly, leaderboard, player name, sounds, modal feedback. <span class="pill-hot">Try it now!</span></p>
-        <div class="tutorial-img"></div>
-      </div>
-    </section>
-
-    <section id="about-panel" class="panel">
-      <div class="card about-card" data-animate="fade-pop">
-        <div class="card-title"><i class="fas fa-users"></i> About</div>
-        <div>
-          <h3>Who we are</h3>
-          <p>We are Group 3, Block 2N, BSIT. Project Team:</p>
-          <ul>
-            <li>CJ R. Tabada</li>
-            <li>Adrian Kith Lagmay</li>
-            <li>Rafael Bangoy Caralipio</li>
-            <li>Cymon Austria</li>
-          </ul>
-          <p>This game was built for math integration, logic mastery, and fun for our class.</p>
-        </div>
-        <!-- Removed about-rubric: Project Rubric table and section -->
-      </div>
-    </section>
-
-    <section id="leaderboard-panel" class="panel">
-      <div class="card leaderboard-card" data-animate="fade-pop">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
-        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
-          <input id="player-name" placeholder="Your name" class="name-input" spellcheck="false" maxlength="20" />
-          <button id="clear-leader" class="btn btn-secondary">Clear</button>
-        </div>
-        <ol id="leader-list"></ol>
-        <div class="leader-desc" data-animate="fade">Top scores are saved locally! Score more by fast & accurate logic!</div>
-      </div>
-    </section>
-  </main>
-
-  <div id="floating-ui" class="floating-ui">
-    <div class="floating-top" data-animate="statbar">
-      <div class="status-indicator hotbox hot-level"><i class="fas fa-layer-group"></i> <span id="stat-level"></span></div>
-      <div class="status-indicator hotbox hot-score"><i class="fas fa-star"></i> <span id="stat-score"></span></div>
-      <div class="status-indicator hotbox hot-life"><i class="fas fa-heart"></i> <span id="stat-lives"></span></div>
-      <div id="floating-timer" class="status-indicator hotbox hot-timer" style="display:none;"><i class="fas fa-stopwatch"></i> <span id="timer-value"></span>s</div>
-    </div>
-    <div class="floating-actions">
-      <button id="btn-retry" class="btn floating-btn hotbox"><i class="fas fa-redo"></i></button>
-      <button id="btn-quit" class="btn floating-btn hotbox"><i class="fas fa-sign-out-alt"></i></button>
-    </div>
-  </div>
-
-  <script src="game.js"></script>
-</body>
-</html>
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
+:root{ --accent:#f45223;--muted:#989ca4;--card:#fff;--bg:#f6f6f6; }
+body{margin:0;font-family:'IBM Plex Mono',monospace;background:var(--bg);color:#222;}
+.container{max-width:1200px;margin:0 auto;padding:18px;}
+.topbar{display:flex;justify-content:space-between;align-items:center;padding:10px 18px;position:sticky;top:0;background:transparent;z-index:80}
+.topbar-left{display:flex;align-items:center;gap:12px}
+.hamburger{display:none;border:none;background:transparent;font-size:18px;cursor:pointer}
+.logo{display:flex;align-items:center;gap:10px;font-weight:700}
+.logo i{color:var(--accent);font-size:21px}
+.topnav{display:flex;gap:16px}
+.topnav .nav-link{background:transparent;border:none;padding:10px 16px;border-radius:8px;cursor:pointer;font-size:1.05rem;color:#555}
+.topnav .nav-link.active{background:var(--card);box-shadow:0 0 8px #eee;color:#222}
+.topbar-right{display:flex;gap:8px;align-items:center}
+.icon-btn{background:transparent;border:1px solid transparent;padding:8px;border-radius:8px;cursor:pointer}
+.icon-btn i{font-size:16px;color:#444}
+/* Game focus XL panel */
+.game-area.focused{max-width:790px;margin:30px auto;padding:18px;background:#fff;border-radius:18px;box-shadow:0 10px 40px 2px #dadccd;}
+.hero.focus-hide{display:none;}
+.small-card, .card{transition:all .18s;}
+.panel:not(.active-panel){display:none;}
+.active-panel{display:block;animation:fadeGamePanel .32s;}
+@keyframes fadeGamePanel {from{opacity:0;transform:scale(0.96);}to{opacity:1;transform:scale(1);}}
+.hero{display:flex;gap:30px;align-items:flex-start;}
+.hero-left{flex:1;}
+.hero-right{width:360px;}
+h1{font-size:2.1rem;margin:0;}
+.subtitle{color:var(--muted);margin-top:7px;margin-bottom:12px;}
+.hero-cta{display:flex;gap:12px;margin-top:10px;}
+.meta-row{display:flex;gap:8px;margin-top:12px;}
+.meta-pill{background:var(--card);padding:7px 11px 5px 11px;border-radius:13px;color:#666;font-size:.95rem;}
+.card{background:var(--card);border-radius:16px;padding:20px;box-shadow:0 7px 32px rgba(0,0,0,0.07);margin-bottom:18px;}
+.card-title{font-weight:700;color:#454545;letter-spacing:.06em;margin-bottom:13px;display:flex;gap:10px;align-items:center;font-size:1.18rem;}
+.settings-row{display:flex;align-items:center;margin-bottom:12px;}
+.settings-label{flex:0 0 120px;color:var(--muted);text-transform:uppercase;font-size:.93rem;}
+.settings-choices{display:flex;gap:12px;flex-wrap:wrap;}
+.settings-card{background:#fafafa;padding:11px 20px 9px 20px;border-radius:8px;cursor:pointer;border:2px solid transparent;display:flex;align-items:center;gap:8px;transition:.19s;}
+.settings-card.active{border-color:var(--accent);background:#fff;box-shadow:0 2px 8px rgba(244,82,35,0.07);}
+.small-card{padding:13px;font-size:1.01rem;}
+.game-section-title{font-weight:800;color:var(--accent);text-transform:uppercase;letter-spacing:.08em;margin-bottom:13px;font-size:1.15em;}
+.matching-container{display:grid;grid-template-columns:1fr 1fr;gap:24px;}
+.game-column{background:#fff;border-radius:12px;padding:16px;box-shadow:0 2px 10px rgba(0,0,0,0.025);}
+.column-title{color:var(--muted);text-transform:uppercase;font-weight:700;margin-bottom:10px;font-size:1.05rem;}
+.draggable-item{background:#fafafa;padding:13px 15px;border-radius:9px;margin-bottom:9px;cursor:grab;border:2px solid #f0f0f0;font-size:1.09rem;font-weight:700;}
+.draggable-item.disabled{opacity:.34;cursor:not-allowed;}
+.drop-zone{min-height:51px;border-radius:9px;border:2.1px dashed #eee;padding:10px;display:flex;align-items:center;gap:10px;background:#fff;}
+.zone-label{color:var(--accent);font-weight:800;font-size:1.22em;}
+.tt-table{margin-bottom:18px;}
+.tt-table th, .tt-table td{padding:9px 12px;border:1px solid #ededed;text-align:center;}
+.tt-table th{background:#f7f7fa;}
+.match-content{font-size:1.09em;color:#25b185;font-weight:700;}
+@media (max-width:950px){.hero{flex-direction:column;}.hero-right{width:100%;margin-top:11px;}.game-area.focused{max-width:97vw;}}
+.floating-ui{position:fixed;right:20px;top:30px;background:#fff;padding:20px 20px 12px 20px;border-radius:19px;box-shadow:0 8px 32px rgba(0,0,0,0.12);z-index:999;display:none;min-width:200px;max-width:300px;}
+.floating-top{display:flex;flex-direction:row;gap:16px;justify-content:center;align-items:center;}
+.status-indicator{background:#fafafa;padding:14px 16px;border-radius:14px;display:inline-flex;gap:12px;align-items:center;font-size:1.24rem;}
+.floating-actions{display:flex;gap:16px;align-items:center;margin-top:15px;justify-content:center;}
+.btn.floating-btn{padding:12px 20px;border-radius:10px;cursor:pointer;font-size:1.2em;}
+.floating-ui .fa-star{color:#f49b23;}
+.floating-ui .fa-heart{color:#e9322f;}
+.floating-ui .fa-layer-group{color:var(--accent);}
+.floating-ui .fa-stopwatch{color:#232;}
+.floating-ui .status-indicator span{font-size:1.18em;}
+.btn{padding:13px 22px;border-radius:11px;border:none;cursor:pointer;font-weight:800;font-size:1.13em;}
+.btn-primary{background:var(--accent);color:#fff;}
+.btn-secondary{background:#fff;color:#333;border:2px solid #eee;}
+.name-input{padding:10px 15px;border-radius:8px;border:2px solid #ddd;font-size:1.09rem;}
+.modal-overlay{position:fixed;inset:0;background:rgba(28,28,32,0.23);display:flex;align-items:center;justify-content:center;z-index:140;}
+.modal-popup{background:#fff;border-radius:18px;padding:22px;min-width:320px;box-shadow:0 12px 36px rgba(0,0,0,0.19);}
+.game-message{position:fixed;right:26px;top:22px;background:#232;color:#fff;padding:12px 17px;border-radius:8px;z-index:200;font-size:1.10em;}
+.tutorial-list, .tips{margin-left:1.2em;}
+.about-card ul{list-style:disc;margin-left:1.3em;color:#444;}
+@media (max-width:700px){
+  .container{padding:9px;}
+  .floating-ui{right:2vw;top:13vw;padding:10px;}
+  .floating-top{gap:8px;}
+  .btn.floating-btn{padding:9px 12px;font-size:1em;}
+  .status-indicator{padding:11px 10px;font-size:1.03em;}
+  .game-area.focused{margin:.4em auto;}
+}
+@media (max-width:560px){
+  .topbar{padding:8px 6vw;}
+  .matching-container{grid-template-columns:1fr;}
+  .game-area.focused{padding:4vw;}
+  .hero-left h1{font-size:1.3rem;}
+  .settings-label{display:none;}
+  .settings-choices{gap:9px;}
+  .column-title{font-size:1em;}
+  .draggable-item{padding:10px 8px;}
+}
